--- a/index.html
+++ b/index.html
@@ -350,8 +350,8 @@
     <section id="buy" class="cta-section">
         <h2 style="font-size: 2.5rem; margin-bottom: 1rem;">Upgrade Your Game</h2>
         <p style="color: var(--text-muted); margin-bottom: 2rem;">Stop throwing money away on broken feathers. Switch to ShuttleCarbs.</p>
-        <div class="price-tag"><s>$35.00</s></div>
-        <div class="price-tag"> $31.00 <span style="font-size: 1.5rem; color: #fff;">/ tube</span></div>
+        <div style="display: none" class="price-tag"><s>$35.00</s></div>
+        <div class="price-tag"> $35.00 <span style="font-size: 1.5rem; color: #fff;">/ tube</span></div>
         <span class="price-sub">Free shipping on orders over $80</span>
 
         <a href="https://wa.me/+6591143195?text=I%20want%20to%20get%20a%20NCS%20Pro%20Tube" class="btn-buy" style="padding: 1rem 3rem; font-size: 1.2rem;">Buy Now</a>
